--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.1.0",
   "description": "React hook for socket.io client, manipulate without any side effect.",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --require babel-core/register test/*.js"
+    "build": "tsc",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest test/*.js"
   },
   "peerDependencies": {
     "react": "^16.8.0",
@@ -26,16 +28,24 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "socket.io-client": "^2.2.0"
+    "await-sync": "^1.0.3",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "react-test-renderer": "^16.8.1"
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/preset-react": "^7.22.5",
+    "@testing-library/jest-dom": "^6.0.1",
+    "@testing-library/react": "^14.0.0",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "core-js": "^3.32.1",
+    "jest": "^29.6.3",
+    "jest-environment-jsdom": "^29.6.3",
+    "portfinder": "^1.0.32",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.7.2",
+    "typescript": "^5.1.6"
   }
 }
